--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,50 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+p, li {
+    font-weight: var(--ifm-font-weight-base);
+}
+
+.main-wrapper {
+    max-width: 1280px;
+    width: 90vw;
+    margin: 0 auto;
+}
+
+.navbar {
+    background-color: var(--ifm-navbar-background-color)/0;
+    backdrop-filter: blur(8px) saturate(2);
+    box-shadow: var(--ifm-navbar-shadow);
+    display: flex;
+    height: var(--ifm-navbar-height);
+    padding: var(--ifm-navbar-padding-vertical) var(--ifm-navbar-padding-horizontal);
+}
+
+.navbar__inner {
+    max-width: 1248px;
+    width: 100vw;
+    margin: 0 auto;
+}
+
+.menu {
+    font-size: 14px;
+    font-weight: var(--ifm-font-weight-base);
+    overflow-x: hidden;
+}
+
+.theme-doc-sidebar-item-link-level-1 {
+    font-weight: 500;
+}
+
+.theme-doc-sidebar-item-category-level-1 > div > a {
+    font-weight: 500;
+}
+
+.theme-doc-sidebar-container {
+    border-right: 0 !important;
+}
+
+.table-of-contents__left-border {
+    border-left: 0 !important;
+}
